Update more styles and fix nav spacing

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 body {
@@ -12,9 +13,6 @@ body {
 }
 
 .header {
-  /*display: flex;
-  align-items: center;
-  justify-content: space-between;*/
   padding: 2px 0;
   background-color: rgba(41, 39, 43, 0.911);
   color: white;
@@ -23,12 +21,15 @@ body {
 .header-wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 38vw;  
 }
 
 .logo {
   font-size: 24px;
   font-weight: bold;
+  padding: 0;
+  margin-left: 9px;
 }
 
 ul {
@@ -39,18 +40,26 @@ ul {
 
 li {
   padding: 8px 16px;
-  /*margin-left: auto;*/
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
 
 .top-wrapper {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  background-color: rgba(41, 39, 43, 0.911);
+  background-color: rgba(41, 39, 43, 0.932);
   padding: 40px 0;
   color: white;
   min-height: 300px;
   gap: 20px;
+}
+
+.top-wrapper > button {
+  margin-bottom: 10px;
 }
 
 .awesome-text {
@@ -191,8 +200,8 @@ h2 {
 footer {
   text-align: center;
   padding: 20px 0;
-  background-color: rgb(0, 0, 0);
-  color: red;
+  background-color: rgb(150, 0, 0);
+  color: rgba(0, 0, 0, 0.925);
   font-weight: bold;
   letter-spacing: 2px;
 }
